# gpu_render_template

./: Cargo.toml
shaders/: mandelbrot-3.wgsl
src/: default.wgsl  main.rs  window.rs
